--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35598,5 +35598,21 @@
         "published": "Thu, 01 Jan 2026 20:35:11 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46457770\">Comments</a>"
+    },
+    {
+        "id": "https://tenderlovemaking.com/2025/12/29/can-bundler-be-as-fast-as-uv/",
+        "title": "Can Bundler be as fast as uv?",
+        "link": "https://tenderlovemaking.com/2025/12/29/can-bundler-be-as-fast-as-uv/",
+        "published": "Thu, 01 Jan 2026 21:37:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46458302\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/swiggy-zomato-magicpin-log-record-new-years-eve-orders-despite-gig-worker-strike",
+        "title": "Swiggy, Zomato, magicpin log record New Year\u2019s Eve orders despite gig worker strike",
+        "link": "https://yourstory.com/2026/01/swiggy-zomato-magicpin-log-record-new-years-eve-orders-despite-gig-worker-strike",
+        "published": "Thu, 01 Jan 2026 13:06:28 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Gig & Platform Service Workers Union (GIPSWU) said over 1 lakh workers from 22 cities joined the strike, including 14,000 of its members from major cities like Delhi, Mumbai, and others."
     }
 ]
