📚 Auto-update: News data refreshed - 2026-01-02 00:53 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35614,5 +35614,61 @@
         "published": "Thu, 01 Jan 2026 13:06:28 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The Gig & Platform Service Workers Union (GIPSWU) said over 1 lakh workers from 22 cities joined the strike, including 14,000 of its members from major cities like Delhi, Mumbai, and others."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/01/is-the-apple-watch-se-3-a-good-deal/",
+        "title": "A guide to choosing the right Apple Watch",
+        "link": "https://techcrunch.com/2026/01/01/is-the-apple-watch-se-3-a-good-deal/",
+        "published": "Fri, 02 Jan 2026 00:20:19 +0000",
+        "source": "TechCrunch",
+        "summary": "The gap between Apple's standard and budget smart watches has never felt smaller."
+    },
+    {
+        "id": "https://www.cnn.com/2025/12/31/europe/finland-estonia-undersea-cable-ship-detained-intl",
+        "title": "Finland detains ship and its crew after critical undersea cable damaged",
+        "link": "https://www.cnn.com/2025/12/31/europe/finland-estonia-undersea-cable-ship-detained-intl",
+        "published": "Thu, 01 Jan 2026 18:46:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46456797\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/catalysts/decoding-gen-zs-experience-first-new-commerce-playbook/articleshow/126292084.cms",
+        "title": "Decoding Gen Z\u2019s experience-first new commerce playbook",
+        "link": "https://economictimes.indiatimes.com/tech/catalysts/decoding-gen-zs-experience-first-new-commerce-playbook/articleshow/126292084.cms",
+        "published": "Fri, 02 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "\u200b\u200bThe digitally-native Gen Z\u2019s willingness to adopt unique, frictionless services is quietly shaping a new model of commerce. Businesses must understand this 377 million-strong cohort if they want to centre innovation on its specific needs."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/tcs-ai-push-showing-tangible-results-ceo/articleshow/126291923.cms",
+        "title": "TCS AI push showing tangible results: CEO",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/tcs-ai-push-showing-tangible-results-ceo/articleshow/126291923.cms",
+        "published": "Fri, 02 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "TCS's push into AI is already translating into tangible results, he said in a company-wide email on 1 January 2026. The company has achieved $1.5 billion in annualised AI services revenues, with 54 of its top 60 clients choosing TCS for their AI transformation initiatives. More than 5,000 AI engagements have been delivered, and over 200 AI platform deployments completed globally."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/how-ai-generated-images-darkened-the-picture-for-enterprises/articleshow/126291840.cms",
+        "title": "How AI-generated images darkened the picture for enterprises",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/how-ai-generated-images-darkened-the-picture-for-enterprises/articleshow/126291840.cms",
+        "published": "Fri, 02 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Such an instance occurred in November, when a quick commerce platform user allegedly created an AI-generated image of a tray with cracked eggs to claim a refund for an order. This could spell real financial loss for companies across the board that depend on visual evidence as proof of incident or transaction."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/cognizant-faces-lawsuits-in-us-over-trizetto-healthcare-data-breach/articleshow/126291708.cms",
+        "title": "Cognizant faces lawsuits in US over TriZetto Healthcare data breach",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/cognizant-faces-lawsuits-in-us-over-trizetto-healthcare-data-breach/articleshow/126291708.cms",
+        "published": "Fri, 02 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "At least four lawsuits were filed in December against Cognizant and TriZetto Provider Solutions in the US district courts for the District of New Jersey and the Eastern District of Missouri. The core allegations claim that TPS failed to adequately protect the impacted people\u2019s data and did not provide timely notifications after a cyberattack."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/industry-pushes-back-on-dli-2-0-contours-in-the-works-govt-defends-tighter-market-linked-support/articleshow/126290996.cms",
+        "title": "Industry pushes back on DLI 2.0 contours in the works, govt defends tighter, market-linked support",
+        "link": "https://economictimes.indiatimes.com/tech/technology/industry-pushes-back-on-dli-2-0-contours-in-the-works-govt-defends-tighter-market-linked-support/articleshow/126290996.cms",
+        "published": "Fri, 02 Jan 2026 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Under DLI 1.0, companies were required to first spend their own money and then claim up to 50% reimbursement from the government, with the support capped at Rs 15 crore per applicant. In DLI 2.0, the proposal is to move to a joint funding mechanism: for every rupee put in by a company\u2019s investors, the government would put in an equal amount."
     }
 ]
