📚 Auto-update: News data refreshed - 2026-01-02 02:53 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35670,5 +35670,101 @@
         "published": "Fri, 02 Jan 2026 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "Under DLI 1.0, companies were required to first spend their own money and then claim up to 50% reimbursement from the government, with the support capped at Rs 15 crore per applicant. In DLI 2.0, the proposal is to move to a joint funding mechanism: for every rupee put in by a company\u2019s investors, the government would put in an equal amount."
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/samsungs-latest-freestyle-portable-projector-is-brighter-and-smarter-014026804.html?src=rss",
+        "title": "Samsung's latest Freestyle portable projector is  brighter and smarter",
+        "link": "https://www.engadget.com/home/home-theater/samsungs-latest-freestyle-portable-projector-is-brighter-and-smarter-014026804.html?src=rss",
+        "published": "Fri, 02 Jan 2026 01:40:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Samsung has upgraded its Freestyle portable projector for 2026. The company announced a new model, the Freestyle+, ahead of CES, touting twice the brightness of its predecessor at 430 ISO lumens, and AI-powered screen optimization features. As with Freestyles past, the Freestyle+ offers 180-degree rotation and 360-degree audio. This one also supports Q-Symphony so it'll work with some Samsung soundbars. Samsung hasn't revealed much else in the way of specs or pricing, but it'll be showing off"
+    },
+    {
+        "id": "https://publicdomainreview.org/blog/2026/01/public-domain-day-2026/",
+        "title": "Happy Public Domain Day 2026",
+        "link": "https://publicdomainreview.org/blog/2026/01/public-domain-day-2026/",
+        "published": "Fri, 02 Jan 2026 01:42:16 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46460440\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-brain-health-dementia-feature-smartwatch/",
+        "title": "Samsung's early detection for dementia may be its killer smartwatch feature in 2026",
+        "link": "https://www.zdnet.com/article/samsung-brain-health-dementia-feature-smartwatch/",
+        "published": "Fri, 02 Jan 2026 02:14:00 GMT",
+        "source": "Latest news",
+        "summary": "Early reports suggest that the tech giant will unveil the new health tracking feature as soon as CES next week."
+    },
+    {
+        "id": "https://www.zdnet.com/article/7-security-camera-rules-experts-recommend/",
+        "title": "7 rules to follow when setting up a home security camera - and where you should never install one",
+        "link": "https://www.zdnet.com/article/7-security-camera-rules-experts-recommend/",
+        "published": "Fri, 02 Jan 2026 02:00:47 GMT",
+        "source": "Latest news",
+        "summary": "Follow these critical tips to boost your security camera's performance and avoid common setup mistakes."
+    },
+    {
+        "id": "https://www.zdnet.com/article/k3-ultramulti-edc-keychain-review/",
+        "title": "My new favorite keychain tool gets just about any job done - at a reasonable price",
+        "link": "https://www.zdnet.com/article/k3-ultramulti-edc-keychain-review/",
+        "published": "Fri, 02 Jan 2026 01:43:56 GMT",
+        "source": "Latest news",
+        "summary": "The K3 Ultramulti EDC keychain tool is multifunctional, combining a flashlight, laser pointer, and lighter into one convenient device."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/samsung-electronics-says-customers-praised-competitiveness-of-hbm4-chip/articleshow/126297027.cms",
+        "title": "Samsung Electronics says customers praised competitiveness of HBM4 chip",
+        "link": "https://economictimes.indiatimes.com/tech/technology/samsung-electronics-says-customers-praised-competitiveness-of-hbm4-chip/articleshow/126297027.cms",
+        "published": "Fri, 02 Jan 2026 08:02:41 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Samsung says customers are impressed by its new HBM4 memory chips, helping restore confidence in its AI credentials and lifting its share price. The company is also gaining momentum in contract chipmaking, backed by big global deals. However, executives warn that 2026 will bring higher costs and trade risks."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/even-the-sky-may-not-be-the-limit-for-ai-data-centres/articleshow/126296892.cms",
+        "title": "Even the sky may not be the limit for AI data centres",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/even-the-sky-may-not-be-the-limit-for-ai-data-centres/articleshow/126296892.cms",
+        "published": "Fri, 02 Jan 2026 07:44:05 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "AI leaders believe Earth may soon lack the power and space for data centres, pushing them to look skyward. Big tech figures are backing the idea of building computing hubs in orbit, despite huge costs and doubts. Supporters say it is inevitable, while critics call it unrealistic."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/in-the-beauty-game-quick-commerces-serving-all-the-looks/articleshow/126296756.cms",
+        "title": "In the beauty game, quick commerce's serving all the looks",
+        "link": "https://economictimes.indiatimes.com/tech/technology/in-the-beauty-game-quick-commerces-serving-all-the-looks/articleshow/126296756.cms",
+        "published": "Fri, 02 Jan 2026 07:26:58 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Quick commerce is reshaping India\u2019s beauty market, with skincare and makeup now bought on impulse and delivered in minutes rather than planned online shopping. The category has surged sharply, reaching about $100 million a month, growing far faster than traditional ecommerce and attracting premium brands."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/owning-hospitals-non-negotiable-india-healthtech-startups",
+        "title": "Control or be controlled: Why owning hospitals will be non-negotiable for India's healthtech startups",
+        "link": "https://yourstory.com/2025/12/owning-hospitals-non-negotiable-india-healthtech-startups",
+        "published": "Fri, 02 Jan 2026 01:15:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "When cancer-care platform Onco shut down operations in early 2025, it offered a lesson for India's healthtech sector: connecting patients to hospitals isn't enough. You need to own the hospitals.\n\nThe Bengaluru-based startup had raised over $7 million from Accel and other prominent investors, build"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/why-owning-hospitals-non-negotiable-indias-healthtech-startups",
+        "title": "Control or be controlled: Why owning hospitals will be non-negotiable for India's healthtech startups",
+        "link": "https://yourstory.com/2025/12/why-owning-hospitals-non-negotiable-indias-healthtech-startups",
+        "published": "Fri, 02 Jan 2026 01:35:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "India's healthtech startups tried to disrupt healthcare with software alone. It didn't work. Now they're buying hospitals, building labs, and betting that vertical integration is the only path to profitability in a fragmented market"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/knight-fintech-raises-236m-series-a-led-by-accel",
+        "title": "Knight FinTech raises $23.6M Series A led by Accel",
+        "link": "https://yourstory.com/2026/01/knight-fintech-raises-236m-series-a-led-by-accel",
+        "published": "Fri, 02 Jan 2026 00:40:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The round also saw participation from IIFL and Rocket Capital, along with existing investors Prime Venture Partners, 3one4 Capital, Commerce VC and Trifecta Capital."
+    },
+    {
+        "id": "https://inc42.com/buzz/indian-startups-in-2026-indias-post-rmg-era-more/",
+        "title": "Indian Startups In 2026, India\u2019s Post RMG Era & More",
+        "link": "https://inc42.com/buzz/indian-startups-in-2026-indias-post-rmg-era-more/",
+        "published": "Fri, 02 Jan 2026 02:30:17 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-Daily-Brief-65.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />What\u2019s In Store For Indian Startups This Year? The Indian startup ecosystem enters 2026 with a new mantra, built on&#8230;"
     }
 ]
