--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35806,5 +35806,13 @@
         "published": "Fri, 02 Jan 2026 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Pristyn Care, which initially started as a lead-generation platform for surgeries, now operates its own network of clinics and has embedded clinical staff within partner hospitals to manage patient journeys from consultation through recovery."
+    },
+    {
+        "id": "https://fordauthority.com/2025/12/ford-engineer-that-designed-gas-tank-indicator-passes-away/",
+        "title": "James Moylan, engineer behind arrow signaling which side to refuel a car, dies",
+        "link": "https://fordauthority.com/2025/12/ford-engineer-that-designed-gas-tank-indicator-passes-away/",
+        "published": "Sat, 27 Dec 2025 01:23:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46398235\">Comments</a>"
     }
 ]
