--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35814,5 +35814,13 @@
         "published": "Sat, 27 Dec 2025 01:23:08 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46398235\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/ed-freezes-inr-192-cr-assets-linked-to-winzo/",
+        "title": "ED Freezes INR 192 Cr Assets Linked To WinZO",
+        "link": "https://inc42.com/buzz/ed-freezes-inr-192-cr-assets-linked-to-winzo/",
+        "published": "Fri, 02 Jan 2026 05:53:02 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"ED freezes winzo assets\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/winzo-trademark-featured-.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The Enforcement Directorate (ED) has frozen gaming startup WinZO\u2019s assets worth INR 192 Cr in a money laundering probe. In&#8230;"
     }
 ]
