--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -35822,5 +35822,53 @@
         "published": "Fri, 02 Jan 2026 05:53:02 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"ED freezes winzo assets\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/winzo-trademark-featured-.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The Enforcement Directorate (ED) has frozen gaming startup WinZO\u2019s assets worth INR 192 Cr in a money laundering probe. In&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/01/even-as-global-crop-prices-fall-indias-arya-ag-is-attracting-investors-and-staying-profitable/",
+        "title": "Even as global crop prices fall, India\u2019s Arya.ag is attracting investors \u2014 and staying profitable",
+        "link": "https://techcrunch.com/2026/01/01/even-as-global-crop-prices-fall-indias-arya-ag-is-attracting-investors-and-staying-profitable/",
+        "published": "Fri, 02 Jan 2026 07:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Arya.ag, an Indian agritech company offering storage facilities near farms and offering lending services to hundreds of thousands of farmers, has drawn investor interest and remained profitable even as global crop prices continue to fall in a volatile commodities market. The investor interest has taken shape in the latest all-equity Series D round from GEF [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/brooks-promo-code/",
+        "title": "20% Off Brooks Promo Code & Deals for January 2026",
+        "link": "https://www.wired.com/story/brooks-promo-code/",
+        "published": "Fri, 02 Jan 2026 06:40:00 +0000",
+        "source": "WIRED",
+        "summary": "Enjoy 20% off your first order with a Brooks coupon code, plus top discounts and deals on our favorite Brooks running shoes."
+    },
+    {
+        "id": "https://www.wired.com/story/lenovo-coupon-code/",
+        "title": "Lenovo Coupon Codes and Deals: $5,000+ Off",
+        "link": "https://www.wired.com/story/lenovo-coupon-code/",
+        "published": "Fri, 02 Jan 2026 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Whether you\u2019re shopping for a ThinkPad, Yoga laptop, or Legion gaming PC, these Lenovo discount codes and promotions can help you save big on your next tech upgrade."
+    },
+    {
+        "id": "https://hmmdaily.com/2018/10/18/your-real-biological-clock-is-youre-going-to-die/",
+        "title": "Real Biological Clock Is You're Going to Die",
+        "link": "https://hmmdaily.com/2018/10/18/your-real-biological-clock-is-youre-going-to-die/",
+        "published": "Fri, 02 Jan 2026 05:39:13 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46461778\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/the-engineering-leadership-perspective-on-ai-coding-speed-quality-and-scale/articleshow/126300106.cms",
+        "title": "The engineering leadership perspective on AI coding: Speed, quality and scale",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/the-engineering-leadership-perspective-on-ai-coding-speed-quality-and-scale/articleshow/126300106.cms",
+        "published": "Fri, 02 Jan 2026 12:00:10 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "As AI tools accelerate how engineering teams write and deploy code, review and quality processes are struggling to keep pace. Swiggy CTO Madhusudhan Rao and other senior technology and engineering leaders will explore these gaps in Bengaluru on 22 January 2026. The core question: If AI has already transformed how your teams commit and ship code, why has your review pipeline not evolved at the same pace?"
+    },
+    {
+        "id": "https://inc42.com/buzz/knight-fintech-raises-23-6-mn-to-build-infrastructure-for-financial-institutions/",
+        "title": "Knight FinTech Raises $23.6 Mn To Build Infrastructure For Financial Institutions",
+        "link": "https://inc42.com/buzz/knight-fintech-raises-23-6-mn-to-build-infrastructure-for-financial-institutions/",
+        "published": "Fri, 02 Jan 2026 06:55:16 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Founded in 2019 by Kushal Rastogi and Parthesh Shah, Knight FinTech provides technology infrastructure to banks, NBFCs and fintechs for digital lending, co-lending, embedded finance, and treasury management solutions.\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-75.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />AI-based banking and lending infras"
     }
 ]
