📚 Auto-update: News data refreshed - 2026-01-02 08:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -35870,5 +35870,77 @@
         "published": "Fri, 02 Jan 2026 06:55:16 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Founded in 2019 by Kushal Rastogi and Parthesh Shah, Knight FinTech provides technology infrastructure to banks, NBFCs and fintechs for digital lending, co-lending, embedded finance, and treasury management solutions.\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-75.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />AI-based banking and lending infras"
+    },
+    {
+        "id": "https://www.theverge.com/news/850992/petkit-ai-camera-yumshare-daily-feast-automatic-wet-food-feeder-eversweet-ultra-fountain",
+        "title": "Petkit\u2019s first automatic wet food feeder keeps track of how much your pet eats",
+        "link": "https://www.theverge.com/news/850992/petkit-ai-camera-yumshare-daily-feast-automatic-wet-food-feeder-eversweet-ultra-fountain",
+        "published": "2026-01-02T03:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Petkit has announced two new automated machines at CES 2026 designed to feed and care for your pets using AI-powered cameras that track their behavior and provide health insights that may otherwise go unnoticed. Launching sometime in April 2026, the Petkit Yumshare Daily Feast is one of the first automatic dispensers that works with wet [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/best-laptops-for-gaming-and-school-132207352.html?src=rss",
+        "title": "The best laptops for gaming and schoolwork in 2026",
+        "link": "https://www.engadget.com/computing/laptops/best-laptops-for-gaming-and-school-132207352.html?src=rss",
+        "published": "Fri, 02 Jan 2026 08:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>A good laptop for both gaming and schoolwork strikes a balance that goes beyond raw power. It should handle essays and research during the day, then jump into your favorite games when you are ready to take a break. That mix is easier to find now, with more laptops offering capable GPUs, solid battery life and designs that do not look out of place in a classroom.<br /><br />Whether you want a budget gaming laptop for lighter titles or a more powerful system that can run demanding games, there "
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/ev-charging-startup-kazam-closes-fy25-at-rs-40-crore-targets-rs-100-crore-run-rate/articleshow/126301559.cms",
+        "title": "EV charging startup Kazam closes FY25 at Rs 40 crore, targets Rs 100 crore run rate",
+        "link": "https://economictimes.indiatimes.com/tech/technology/ev-charging-startup-kazam-closes-fy25-at-rs-40-crore-targets-rs-100-crore-run-rate/articleshow/126301559.cms",
+        "published": "Fri, 02 Jan 2026 13:22:43 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "IFC-backed EV charging startup Kazam posted Rs 40 crore revenue in FY25 as demand shifts towards reliable, high-usage infrastructure. The company expects Rs 100 crore revenue and profitability by early 2026, driven by strong growth in tier 2 and 3 cities. The platform currently manages over 9,000 MWh of energy transactions every month, up nearly 60% from June 2025, it said in a statement."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-to-broaden-investment-opportunities-in-2026-smaller-firms-to-benefit-report/articleshow/126301357.cms",
+        "title": "AI to broaden investment opportunities in 2026, smaller firms to benefit: Report",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-to-broaden-investment-opportunities-in-2026-smaller-firms-to-benefit-report/articleshow/126301357.cms",
+        "published": "Fri, 02 Jan 2026 13:05:29 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The report noted that although several productivity-enhancing opportunities through AI have been identified, execution challenges have limited the benefits for many corporates. The report also pointed out that the current AI ecosystem is structurally different from earlier technology waves, such as the Internet era."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/gig-workers-strike-zomato-ceo-deepinder-goyal-defends-10-minute-deliveries/articleshow/126300959.cms",
+        "title": "Gig workers\u2019 strike: Zomato CEO Deepinder Goyal defends 10-minute deliveries",
+        "link": "https://economictimes.indiatimes.com/tech/technology/gig-workers-strike-zomato-ceo-deepinder-goyal-defends-10-minute-deliveries/articleshow/126300959.cms",
+        "published": "Fri, 02 Jan 2026 12:47:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Zomato CEO Deepinder Goyal defended the company\u2019s 10-minute delivery model after gig workers\u2019 strikes raised safety concerns. He said fast deliveries rely on nearby stores, not riders rushing, and denied worker exploitation. His comments triggered wider debate on pay, working conditions and road safety violations."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/bharat-taxi-to-launch-by-january-end-after-pilot-run",
+        "title": "Bharat Taxi to launch by January-end after pilot run",
+        "link": "https://yourstory.com/2026/01/bharat-taxi-to-launch-by-january-end-after-pilot-run",
+        "published": "Fri, 02 Jan 2026 05:50:30 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Bharat Taxi has been recording an average of 5,500 rides daily, including 4,000 from the airport and 1,500 from other locations across cab, auto, and bike categories. More than 1.4 lakh drivers have registered on the app so far."
+    },
+    {
+        "id": "https://inc42.com/buzz/zappfresh-to-acquire-majority-stake-in-rtc-meat-brand-avyom-foodtech/",
+        "title": "Zappfresh To Acquire Majority Stake In Ready-To-Cook Brand Avyom Foodtech",
+        "link": "https://inc42.com/buzz/zappfresh-to-acquire-majority-stake-in-rtc-meat-brand-avyom-foodtech/",
+        "published": "Fri, 02 Jan 2026 08:07:20 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"zappfresh acquires avyom foodtech\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Hero-73.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Delhi NCR-based meat delivery startup Zappfresh\u2019s board has approved the acquisition of a 51% stake in Avyom Foodtech Private Limited&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/ola-electric-jumps-over-8-on-two-wheeler-ev-market-share-increase/",
+        "title": "Ola Electric Jumps Over 8% On Two-Wheeler EV Market Share Increase",
+        "link": "https://inc42.com/buzz/ola-electric-jumps-over-8-on-two-wheeler-ev-market-share-increase/",
+        "published": "Fri, 02 Jan 2026 07:23:13 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Ola Electric Jumps Over 8% On Two-Wheeler EV Market Share Increase\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ola-electric-sankalp-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Shares of EV maker Ola Electric surged 8.7% to touch an intraday high of INR 40.77 on the BSE. The&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-china-ai-chatbot-regulation-data-privacy-risks/",
+        "title": "China\u2019s Draft to Regulate AI Chatbots Raises Questions About User Privacy and Online Speech",
+        "link": "https://www.medianama.com/2026/01/223-china-ai-chatbot-regulation-data-privacy-risks/",
+        "published": "Fri, 02 Jan 2026 07:17:22 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>China has released draft rules to regulate human-like AI chatbots, introducing strict requirements on user identification, safety monitoring, and content controls. The move raises concerns over data privacy and online speech.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-china-ai-chatbot-regulation-data-privacy-risks/\">China\u2019s Draft to Regulate AI Chatbots Raises Questions About User Privacy and Online Speech</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA"
     }
 ]
